# 6DOF_trajectory_simulator

./: .gitignore  6_DOF_trajectory_simulator_AppexB.docx  CMakeLists.txt  README.md  pyproject.toml
.cursor/plans/: 6-dof_trajectory_simulator_d996f32b.plan.md
cpp/api/: python_bindings.cpp  simulator_api.cpp  simulator_api.hpp
cpp/dynamics/: rigid_body.cpp  rigid_body.hpp
cpp/frames/: transform.hpp
cpp/integrators/: rk4.cpp  rk4.hpp
cpp/math/: quaternion.hpp  vector.hpp
cpp/models/: aero_model.hpp  atmosphere.hpp  thrust.hpp
examples/aircraft/: __init__.py  run_aircraft.py
examples/free_fall/: __init__.py  run_free_fall.py
examples/rocket/: __init__.py  run_rocket.py
src/trajectory_sim/: __init__.py
src/trajectory_sim/config/: __init__.py  mission.py  vehicle.py
src/trajectory_sim/control/: __init__.py  controller.py
src/trajectory_sim/core/: __init__.py  api.py  simulator.py  state.py
src/trajectory_sim/guidance/: __init__.py  guidance.py
src/trajectory_sim/models/: __init__.py  atmosphere.py  coefficient_models.py  thrust.py
src/trajectory_sim/monte_carlo/: __init__.py  run.py
src/trajectory_sim/runner/: __init__.py  single_run.py
src/trajectory_sim/visualization/: __init__.py  plots_2d.py  trajectory_3d.py
tests/test_python/: test_config.py  test_models.py  test_state.py
